--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/react": "^4.2.4",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/vite": "^4.1.3",
@@ -27,8 +30,10 @@
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.3"
   }
 }
