--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "sharp": "^0.34.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
